<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/left_indent"
    android:layout_marginEnd="@dimen/right_indent"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/shoeImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question"
            android:padding="@dimen/image_interior_indent"
            android:background="@color/hint"
            />
        <TextView
            android:id="@+id/shoeNameView"
            style="@style/text_view_in_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            />
        <TextView
            android:id="@+id/shoeCompanyView"
            style="@style/text_view_in_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            />
        <TextView
            android:id="@+id/shoeSizeView"
            style="@style/text_view_in_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            />
        <TextView
            android:id="@+id/shoeDescriptionView"
            style="@style/text_view_in_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_half_indent"
            android:text="@string/shoe_description"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>