<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Used to scroll linear layout views in small screen !-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Used constraintLayout instead linearLayout for different view constraints, because
         we don't need auto-top linear constraints, and we have marking more different, than in stack !-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.udacity.shoestore.customview.EditField
                android:id="@+id/loginEditField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hint="@string/login"
                app:isNextIme="true"
                app:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <com.udacity.shoestore.customview.EditField
                android:id="@+id/passwordEditField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hint="@string/password"
                app:isDoneIme="true"
                app:inputType="password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginEditField" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditField"
                app:layout_constraintVertical_bias="0.3"
                style="@style/default_button" />

            <Button
                android:id="@+id/signUpButton"
                style="@style/light_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_half_indent"
                android:text="@string/sign_up"
                android:layout_marginBottom="@dimen/bottom_half_indent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInButton"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>